--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.24.3
-Flask==2.2.2
-Werkzeug==2.2.2
+flask==2.2.2
 flask_cors
-matplotlib
+numpy==1.24.3
+plotly==5.13.0
+kaleido  # For static image export
